--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,14 +3,15 @@
 cmake_minimum_required(VERSION 3.20.0)
 
 macro(app_set_runner_args)
-  board_runner_args(dfu-util "--dfuse-modifiers=force:mass-erase")
-  board_runner_args(pyocd "--erase")
-  board_runner_args(nrfjprog "--erase")
+#   board_runner_args(dfu-util "--dfuse-modifiers=force:mass-erase")
+#   board_runner_args(pyocd "--erase")
+#   board_runner_args(nrfjprog "--recover")
+#   board_runner_args(nrfjprog "--log=prog.out")
 endmacro()
 
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 project(nvs)
 
 
-target_sources(app PRIVATE src/main.c)
+target_sources(app PRIVATE src/main.c src/BoardConfigs.c)
 target_include_directories(app PRIVATE ${ZEPHYR_BASE}/subsys/fs/nvs)
