--- a/prj.conf
+++ b/prj.conf
@@ -6,3 +6,9 @@ CONFIG_LOG=y
 CONFIG_NVS_LOG_LEVEL_DBG=y
 CONFIG_REBOOT=y
 CONFIG_MPU_ALLOW_FLASH_WRITE=y
+
+# Disable console.
+CONFIG_CONSOLE=y
+CONFIG_UART_CONSOLE=y
+CONFIG_RTT_CONSOLE=y
+CONFIG_STDOUT_CONSOLE=n
